--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,10 @@
 site_name: East River Village
 site_url: https://eastrivervillage.com
-site_author: Balakumaran Kannan
+site_author: Bala
+icon: material/code-greater-than
 theme:
   name: material
+  favicon: blog/images/fabicon.png
   icon:
     logo: material/code-greater-than
   palette:
@@ -29,20 +31,19 @@ theme:
 
 plugins:
   - search
+  - meta
   - blog:
+      authors: true
+      authors_profiles: true
       blog_toc: true
       archive_date_format: MMMM yyyy
       categories_allowed:
         - Holidays
         - News
-      authors_profiles: true
       pagination_per_page: 1
-      archive_pagination_per_page: 10
-      categories_pagination_per_page: 10
       # post_slugify: !!python/object/apply:ext.slugs.slugify
       #   kwds:
       #     short: true
-  - meta
   - tags
   - rss:
       match_path: "blog/posts/.*"
@@ -51,6 +52,7 @@ plugins:
         as_update: date.updated
 
 extra:
+  homepage: https://eastrivervillage.com
   social:
     - icon: fontawesome/brands/linkedin
       name: LinkedIn
